test/e2e/pass/runtime/plain_generic_call_lifting.cst
runtime fn source() -> num { 41 }

fn id<T>(value: T) -> T {
    value
}

fn main() {
    let value: runtime num = id(runtime { 2 });
    let lifted: runtime num = id(source());
    let _ = value;
    let _ = lifted;
}
