test/e2e/fail_compile/generics/ct_required_generic_runtime_argument.cst
runtime fn source() -> num { 1 }

fn static_id<T>(value: const T) -> T {
    value
}

fn main() -> runtime num {
    static_id(source())
}
